Using Environment instead of @Value